D&C with Waiting